--- a/Cal/Cal.vcxproj
+++ b/Cal/Cal.vcxproj
@@ -20,10 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cal.h" />
+    <ClInclude Include="factory.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cal.cpp" />
+    <ClCompile Include="factory.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
