--- a/Cal/Cal.vcxproj.filters
+++ b/Cal/Cal.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="cal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="factory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cal.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="factory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
