--- a/Cal/Cal.vcxproj.filters
+++ b/Cal/Cal.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="factory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="processor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
